GC algorithms